--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,5 @@
-
 {
-  "id": "/mia-consent-offline-form-50/",
+  "id": "/mia-consent-offline-form/",
   "name": "Mia Healthcare Consent Form",
   "short_name": "Mia Healthcare",
   "description": "Professional offline dental consent form application for Mia Healthcare - capture patient consent forms with full offline capability and automatic cloud sync",
@@ -10,8 +9,8 @@
   "orientation": "portrait-primary",
   "theme_color": "#ef4805",
   "background_color": "#ffffff",
-  "start_url": "./",
-  "scope": "./",
+  "start_url": "/mia-consent-offline-form/",
+  "scope": "/mia-consent-offline-form/",
   "lang": "en-US",
   "dir": "ltr",
   "categories": ["medical", "healthcare", "productivity", "business"],
@@ -25,90 +24,65 @@
   "protocol_handlers": [
     {
       "protocol": "web+miaconsent",
-      "url": "./consent-form?form=%s"
+      "url": "/mia-consent-offline-form/consent-form?form=%s"
     }
   ],
   "icons": [
     {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+      "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
       "sizes": "48x48",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+      "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
       "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+      "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
       "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+      "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
       "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+      "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+      "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
       "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+      "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ],
   "screenshots": [
     {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+      "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
       "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "Mia Healthcare Consent Form - Desktop Dashboard"
+      "type": "image/png"
     },
     {
-      "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+      "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
       "sizes": "750x1334",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Mia Healthcare Consent Form - Mobile Interface"
+      "type": "image/png"
     }
   ],
   "shortcuts": [
     {
       "name": "New Consent Form",
-      "short_name": "New Form",
-      "description": "Start a new dental consent form",
-      "url": "./consent-form",
+      "url": "/mia-consent-offline-form/consent-form",
       "icons": [
         {
-          "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+          "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
           "sizes": "96x96",
           "type": "image/png"
         }
@@ -116,12 +90,10 @@
     },
     {
       "name": "Draft Forms",
-      "short_name": "Drafts",
-      "description": "View and manage draft forms",
-      "url": "./?tab=drafts",
+      "url": "/mia-consent-offline-form/?tab=drafts",
       "icons": [
         {
-          "src": "./lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
+          "src": "/mia-consent-offline-form/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png",
           "sizes": "96x96",
           "type": "image/png"
         }
