--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "postbuild": "cp dist/index.html dist/404.html",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
-  },
+    "deploy": "vite build && cp dist/index.html dist/404.html && gh-pages -d dist" 
+   },
   "dependencies": {
     "@capacitor/android": "^7.3.0",
     "@capacitor/cli": "^7.3.0",
