feat: Add related applications section to manifest for Windows platform

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -100,4 +100,14 @@
       ]
     }
   ]
+,
+  "related_applications": [
+    {
+      "platform": "windows",
+      "url": "https://apps.microsoft.com/detail/9P23LZQRW0QZ",
+      "id": "JohanPotgieter.MiaOfflineConsent"
+    }
+  ],
+  "prefer_related_applications": true,
+  "iarc_rating_id": "pending"
 }
