--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vite-plugin-pwa": "^1.0.0"
   },
   "homepage": "https://Johan-Potgieter-info.github.io/mia-consent-offline-form"
 }
